[package]
name = "dingtalk"
version = "1.1.2"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "DingTalk Robot Util, Send text/markdown/link messages using DingTalk robot, 钉钉机器人"
keywords = ["DingTalk", "Robot", "Message"]
readme = "README.md"
repository = "https://git.hatter.ink/hatter/dingtalk"
license = "MIT"

[dependencies]
base64 = "0.11.0"
reqwest = "0.10.0"
urlencoding = "1.0.0"
json = "0.12.0"
futures = "0.3.1"
hmac = "0.7.1"
sha2 = "0.8.1"

[dev-dependencies]
tokio-test = "0.2.0"
