[package]
name = "dingtalk"
version = "2.0.1"
authors = ["Hatter Jiang <jht5945@gmail.com>"]
edition = "2018"
description = "DingTalk Robot Util, Send text/markdown/link messages using DingTalk robot, 钉钉机器人"
keywords = ["DingTalk", "Robot", "Message"]
readme = "README.md"
repository = "https://git.hatter.ink/hatter/dingtalk"
license = "MIT"

[dependencies]
base64 = "0.11.0"
reqwest = "0.11.11"
urlencoding = "1.0.0"
futures = "0.3.1"
hmac = "0.7.1"
sha2 = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.2.0"
